--- a/blog-single.html
+++ b/blog-single.html
@@ -363,7 +363,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Therapy
           -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="#">Extfo</a>
           </div>
         </div>
       </div>
